Minor style fixes
* Mysterious scrollbar on calendar
* Button font
* button-group/label interaction

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -22,6 +22,10 @@ label .label-note {
   margin: 0 0.75rem;
 }
 
+button, .button {
+  font-family: $body-font-family;
+}
+
 header {
   margin-bottom: 1.5rem;
 
